# djpress-example-plugin

./: README.md  pyproject.toml
src/djpress_example_plugin/: plugin.py
