[project]
name = "djpress-example-plugin"
version = "1.0.0"
description = "Example plugin for DJ Press"
readme = "README.md"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
requires-python = ">=3.10"
dependencies = ["djpress>=0.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
